--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <scope>test</scope>
+    </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
